Refactored fronted. Added User CRUD.
