# src/main/resources/api.yaml
@@ -38,39 +38,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Quiz'
-  /quiz/paginated:
-    get:
-      summary: Get a paginated list of quizzes
-      parameters:
-        - name: page
-          in: query
-          description: Page number
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Returns a paginated list of quizzes
-          content:
-            application/json:
-              schema:
-                type: array
-                $ref: '#/components/schemas/Quiz'
-  /quiz/pagesCount:
-    get:
-      summary: Get total number of pages
-      responses:
-        '200':
-          description: Total number of pages
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  numberOfPages:
-                    type: integer
-                    format: int64
     put:
       summary: Update quiz
       parameters:
@@ -110,222 +77,137 @@ paths:
           description: Quiz successfully deleted
         '404':
           description: Quiz not found
-  /quiz/{quizId}/questions:
-    post:
-      summary: Create a new question
+  /quiz/paginated:
+    get:
+      summary: Get a paginated list of quizzes
       parameters:
-      - name: quizId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+        - name: page
+          in: query
+          description: Page number
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Returns a paginated list of quizzes
+          content:
+            application/json:
+              schema:
+                type: array
+                $ref: '#/components/schemas/Quiz'
+  /quiz/pagesCount:
+    get:
+      summary: Get total number of pages
+      responses:
+        '200':
+          description: Total number of pages
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  numberOfPages:
+                    type: integer
+                    format: int64
+  /user:
+    post:
+      summary: Create new user
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Question'
+              $ref: '#/components/schemas/User'
       responses:
         '201':
-          description: Question created successfully
+          description: The user was successfully created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Question'
-  /quiz/{quizId}/questions/{questionId}:
+                $ref: '#/components/schemas/User'
+  /user/{id}:
     get:
-      summary: Get a specific question by id
+      summary: Get a specific user
       parameters:
-      - name: quizId
+      - name: id
         in: path
         required: true
         schema:
           type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
       responses:
         '200':
-          description: Returns a specific question
+          description: The requested user
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Question'
+                $ref: '#/components/schemas/User'
     put:
-      summary: Update question
+      summary: Update a specific user
       parameters:
-      - name: quizId
+      - name: id
         in: path
         required: true
         schema:
           type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Question'
+              $ref: '#/components/schemas/User'
       responses:
         '200':
-          description: Question successfully updated
+          description: The user was successfully updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Question'
-        '400':
-          description: Invalid question supplied
-        '404':
-          description: Question not found
+                $ref: '#/components/schemas/User'
     delete:
-      summary: Delete question
+      summary: Delete a specific user
       parameters:
-      - name: quizId
+      - name: id
         in: path
         required: true
         schema:
           type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
       responses:
-        '200':
-          description: Question successfully deleted
-        '404':
-          description: Question not found
-  /quiz/{quizId}/questions/{questionId}/answers:
-    post:
-      summary: Create a new answer
-      parameters:
-      - name: quizId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Answer'
-      responses:
-        '201':
-          description: Answer created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Answer'
-  /quiz/{quizId}/questions/{questionId}/answers/{answerId}:
+        '204':
+          description: The user was successfully deleted
+  /user/pagesCount:
     get:
-      summary: Get a specific answer by id
-      parameters:
-      - name: quizId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: answerId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+      summary: Get total number of pages
+      operationId: getTotalNumberOfUserPages
       responses:
         '200':
-          description: Returns a specific answer
+          description: Number of pages
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Answer'
-    put:
-      summary: Update answer
+                type: object
+                properties:
+                  numberOfPages:
+                    type: integer
+                    format: int64
+  /user/paginated:
+    get:
+      summary: Get a paginated list of users
+      operationId: listPaginatedUsers
       parameters:
-      - name: quizId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: answerId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Answer'
+        - name: page
+          in: query
+          description: The page number to fetch
+          required: true
+          schema:
+            type: integer
+            format: int32
       responses:
         '200':
-          description: Answer successfully updated
+          description: A paginated list of users
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Answer'
-        '400':
-          description: Invalid answer supplied
-        '404':
-          description: Answer not found
-    delete:
-      summary: Delete answer
-      parameters:
-      - name: quizId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: answerId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        '200':
-          description: Answer successfully deleted
-        '404':
-          description: Answer not found
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
   /authentication/login:
     post:
       summary: Attempt to log in as admin
@@ -417,3 +299,18 @@ components:
           correct:
             type: boolean
             example: true
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        username:
+          type: string
+        password:
+          type: string
+        roles:
+          type: array
+          items:
+            type: string
+            enum: [ADMIN, MODERATOR]
